--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ header button {
     cursor: pointer;
     font-weight: bold;
     border-radius: 5px;
+    color: white;
 }
 
 /* Profile */
@@ -62,7 +63,7 @@ header button {
 .skill-bar {
     width: 100%;
     height: 10px;
-    background: #847c7c;
+    background: #ccc;
     border-radius: 5px;
 }
 
@@ -91,6 +92,7 @@ header button {
     border-radius: 8px;
     text-align: center;
     transition: transform 0.3s;
+    background: white;
 }
 
 .experience-item:hover, .project:hover {
@@ -119,11 +121,12 @@ input, textarea {
 
 button {
     background: #919b93;
-    color: rgb(0, 0, 0);
+    color: black;
     padding: 10px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
+    font-weight: bold;
 }
 
 /* Dark Mode */
@@ -135,19 +138,17 @@ button {
 .dark-mode .skill-bar {
     background: #444;
 }
-#contact {
+
+/* Contact Info */
+#contact-info {
     background: #1e1b1b;
     color: rgb(255, 255, 255);
     padding: 20px;
 }
 
-{
-    color: rgb(4, 185, 245);
-}
 footer {
     background: #40ce56;
-    color: rgb(255, 251, 251)32, 11, 11)32, 29, 29);
+    color: white;
     padding: 10px;
     text-align: center;
 }
-//update
